welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:19: error: Unmatched closing brace '}' ignored here
}
^